nginx-php-fpm/tools/k8s/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: php
  name: php
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: php
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/nginxphp: "true"
        io.kompose.service: php
    spec:
      containers:
      - image: php
        imagePullPolicy: ""
        name: php
        ports:
        - containerPort: 9000
        resources: {}
        volumeMounts:
        - mountPath: /anakin
          name: php-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: php-claim0
        persistentVolumeClaim:
          claimName: php-claim0
status: {}
