nginx-php-fpm/tools/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/nginxphp: "true"
        io.kompose.service: web
    spec:
      containers:
      - image: nginx:alpine
        imagePullPolicy: ""
        name: web
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /anakin/
          name: web-claim0
        - mountPath: /etc/nginx/conf.d
          name: web-claim1
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: web-claim0
        persistentVolumeClaim:
          claimName: web-claim0
      - name: web-claim1
        persistentVolumeClaim:
          claimName: web-claim1
status: {}
