nginx-php-fpm/tools/k8s/nginxphp-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: nginxphp
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/nginxphp: "true"
  podSelector:
    matchLabels:
      io.kompose.network/nginxphp: "true"
